--- a/css/styles.css
+++ b/css/styles.css
@@ -642,7 +642,6 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     background-color: #E7E9FC;
     fill: #2E2F42;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
@@ -777,6 +776,8 @@ margin-bottom: 16px;
 > .review-form-own-checkbox {
     background-color: #404BBF;
     border-color: #404BBF;
+    border: none;
+    fill: #F4F4FD;
 }
 
 .review-form-checkbox:focus
@@ -797,6 +798,11 @@ margin-bottom: 16px;
     opacity: 1;
     border: none;
     fill: #F4F4FD;
+}
+
+.review-form-checbox-privacy {
+    color: #4d5ae5;
+    margin-left: 4px;
 }
 
 .review-form-submit-btn {
@@ -822,8 +828,4 @@ margin-bottom: 16px;
     background-color: #404BBF;
 }
 
-.review-form-checbox-privacy {
-    margin-left: 4px;
-    color: #4d5ae5;
-}
 /*============ Modal Window Styles ============*/
